re PR tree-optimization/50078 (combine wrong code: volatile accesses optimized out)

PR tree-optimization/50078
	* tree-ssa-forwprop.c (forward_propagate_addr_expr_1): Copy over
	TREE_THIS_VOLATILE also from the old to new lhs resp. rhs.

	* gcc.dg/pr50078.c: New test.

From-SVN: r181786